chore(ui): add shadcn components, liquid glass header, mobile radial settings; feat(i18n): localized nav labels; feat(ux): add pacer utils with debounce/throttle/rate-limit and apply to toggles; style: align borders/rings and separators; fix: async header + theme animation guards

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,16 @@
 {
   "common": {
     "welcome": "Welcome",
-    "home": "Home"
+    "home": "Home",
+    "menu": "Menu",
+    "info": "Info",
+    "call": "Call"
+  },
+  "footer": {
+    "legal": {
+      "privacy": "Privacy",
+      "terms": "Terms",
+      "imprint": "Imprint"
+    }
   }
 }
