feat(footer): align social left; rename to Social; responsive: place Legal under Explore on 2-col; fix keys & i18n

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,6 +6,9 @@
     "info": "Info",
     "call": "Call"
   },
+  "seo": {
+    "siteName": "Alexy Roman"
+  },
   "footer": {
     "legal": {
       "privacy": "Privacy",
