--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -6,6 +6,9 @@
     "info": "Infos",
     "call": "Appeler"
   },
+  "seo": {
+    "siteName": "Alexy Roman"
+  },
   "footer": {
     "legal": {
       "privacy": "Confidentialité",
