i18n(footer): localize all footer elements via next-intl; fix locale routing in links; pass SSR messages via layout; add social labels; disable client detection; clean tsconfig; fix lint

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,10 +10,25 @@
     "siteName": "Alexy Roman"
   },
   "footer": {
+    "titles": {
+      "legal": "Legal",
+      "social": "Social",
+      "explore": "Explore"
+    },
+    "brandSubtitle": "Text.",
+    "rightsReserved": "All rights reserved.",
+    "designedByPrefix": "Designed by",
+    "designedByName": "WebOustaou",
     "legal": {
       "privacy": "Privacy",
       "terms": "Terms",
       "imprint": "Imprint"
+    },
+    "social": {
+      "googleMaps": "Google Maps",
+      "instagram": "Instagram",
+      "facebook": "Facebook",
+      "tripadvisor": "Tripadvisor"
     }
   }
 }
