--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,7 +35,7 @@
     "title": "Menu",
     "subtitle": "Discover our selection",
     "allergens": "Allergens",
-    "itemsCount": "{count} items",
+    "itemsCount": "{count} pizza{count, plural, =1 {} other {s}}",
     "filters": {
       "allCategories": "All categories",
       "searchCategories": "Search categories...",
