--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -35,7 +35,7 @@
     "title": "Menu",
     "subtitle": "Découvrez notre sélection",
     "allergens": "Allergènes",
-    "itemsCount": "{count} articles",
+    "itemsCount": "{count} pizza{count, plural, =1 {} other {s}}",
     "filters": {
       "allCategories": "Toutes les catégories",
       "searchCategories": "Rechercher des catégories...",
