fix: buttons hover effect on phones

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -15,7 +15,7 @@
       "social": "Réseaux",
       "explore": "Explorer"
     },
-    "brandSubtitle": "Pizza italienne authentique préparée avec amour, tradition et les meilleurs ingrédients. Découvrez le goût de l'Italie dans chaque bouchée.",
+    "brandSubtitle": "Pizza authentique préparée avec amour, tradition et les meilleurs ingrédients. Découvrez le goût de l'Italie dans chaque bouchée.",
     "rightsReserved": "Darius Pizza. Tous droits réservés.",
     "designedByPrefix": "Créé par",
     "designedByName": "WebOustaou - Alexy Roman",
