feat: veggie badge

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -47,6 +47,7 @@
     }
   },
   "allergens": {
+    "vegetarian": "Vegetarisch",
     "gluten": "Gluten",
     "eggs": "Eier",
     "milk": "Milch",
