--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -47,6 +47,7 @@
     }
   },
   "allergens": {
+    "vegetarian": "Vegetariano",
     "gluten": "Gluten",
     "eggs": "Huevos",
     "milk": "Leche",
