--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -47,6 +47,7 @@
     }
   },
   "allergens": {
+    "vegetarian": "Végétarien",
     "gluten": "Gluten",
     "eggs": "Oeufs",
     "milk": "Lait",
