--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -47,6 +47,7 @@
     }
   },
   "allergens": {
+    "vegetarian": "Vegetariano",
     "gluten": "Glutine",
     "eggs": "Uova",
     "milk": "Latte",
